tests/errors/surf_lex_01.ki
# LEXER: a double-quoted string that runs to end-of-file with no closing quote
var s = "this string never closes